--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,11 @@
 {
     "require": {
         "symfony/console": "2.*"
+    },
+
+    "autoload" : {
+        "psr-0" : {
+            "" : "src/"
+        }
     }
 }
