--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "require": {
-        "symfony/console": "2.*"
+        "symfony/console"       : "2.*",
+        "symfony/filesystem"    : "2.*" 
     },
     "require-dev": {
         "phpunit/phpunit": "4.1.*"
