--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
     "require": {
         "symfony/console"       : "2.*",
-        "symfony/filesystem"    : "2.*" 
+        "symfony/filesystem"    : "2.*",
+        "symfony/finder"        : "2.*"
     },
     "require-dev": {
         "phpunit/phpunit": "4.1.*"
